Adjusting dockerfile to support running android emulation